# promptr

./: .gitignore  Cargo.toml  README.md  build.rs  promptr.json
.config/: spellcheck.toml
.github/workflows/: rust.yml
ffi/: ffi.h  freebsd.cc  mac_os.cc
git-tests/: README.md  cherry-pick.tar.xz  empty.tar.xz  rebase-interactive.tar.xz  untracked-file.tar.xz
promptr-macros/: Cargo.toml
promptr-macros/src/: lib.rs
spell/: en_US.aff  jargon.dic
src/: ansi.rs  lib.rs  main.rs  segment.rs  shell.rs  test.rs
src/segment/: battery_status.rs  command_status.rs  git.rs  hostname.rs  path.rs  paths.rs  rvm.rs  screen.rs  username.rs  vcs.rs
src/test/: segment.rs
src/test/segment/: command_status.rs  git.rs  hostname.rs  path.rs  paths.rs  screen.rs  username.rs
