[package]
name = "promptr"
version = "0.1.0"
edition = "2021"

[lib]
name = "libpromptr"

[dependencies]
anyhow = "1.0"
battery = { version = "0.7.8", optional = true }
clap = { version = "3", features = [ "derive" ] }
directories = "4.0"
git2 = { version = "0.14", optional = true }
indoc = "1.0"
itertools = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
sysctl = "0.4.4"

[features]
default = [ "segment-battery", "segment-git" ]
segment-battery = [ "battery" ]
segment-git = [ "git2" ]

[profile.release]
lto = "thin"
