[package]
name = "promptr"
version = "0.1.0"
edition = "2021"
description = "Powerful command prompt generator for bash"
repository = "https://github.com/inferiorhumanorgans/promptr"
license = "GPL-3.0-or-later"

[lib]
name = "libpromptr"

[workspace]
members = [
    "promptr-macros"
]

[dependencies]
anyhow = "1.0"
battery = { version = "0.7.8", optional = true }
clap = { version = "3", features = [ "derive" ] }
directories = "4.0"
git2 = { version = "0.14", optional = true }
indoc = "1.0"
itertools = "0.10"
promptr-macros = { path = "promptr-macros" }
regex = "1"
semver = { version = "1.0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "freebsd")'.dependencies]
sysctl = "0.4.4"

[target.'cfg(any(target_os = "macos", target_os = "freebsd"))'.dependencies]
cxx = "1.0"

[target.'cfg(any(target_os = "macos", target_os = "freebsd"))'.build-dependencies]
cxx-build = "1.0"

[features]
default = [ "segment-battery", "segment-git", "segment-rvm" ]
segment-battery = [ "battery" ]
segment-git = [ "git2" ]
segment-rvm = [ "semver" ]

[profile.release]
lto = "thin"
